--- a/examples/hla_score_layers-willett.ipynb
+++ b/examples/hla_score_layers-willett.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "is_executing": true,
@@ -41,95 +41,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45d7e0d7bdbd4609bb6123d6c453f471",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/666 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41b042ace4be43cda14a8a7ee807ec8d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/3.25G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3be1d2503c404772a18c8c5b5f4d7a67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/124 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2252091669d2412a954996c0f1729e35",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49d9fe9d3e844150aea3f75fc1ba9eec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a3686376dba4795b4ca6aa4bc8b0217",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages/brainscore_core/metrics/__init__.py:16: FutureWarning: xarray subclass Score should explicitly define __slots__\n",
+      "  class Score(DataAssembly):\n"
+     ]
     }
    ],
    "source": [
     "from brainscore_language.model_helpers.huggingface import HuggingfaceSubject\n",
     "from brainscore_language import ArtificialSubject\n",
     "\n",
-    "model_identifier = 'gpt2-large'\n",
+    "model_identifier = 'distilgpt2'\n",
     "\n",
     "model = HuggingfaceSubject(model_id=model_identifier, region_layer_mapping={})\n",
     "\n",
@@ -151,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -165,19 +89,19 @@
      "text": [
       "GPT2LMHeadModel(\n",
       "  (transformer): GPT2Model(\n",
-      "    (wte): Embedding(50257, 1280)\n",
-      "    (wpe): Embedding(1024, 1280)\n",
+      "    (wte): Embedding(50257, 768)\n",
+      "    (wpe): Embedding(1024, 768)\n",
       "    (drop): Dropout(p=0.1, inplace=False)\n",
       "    (h): ModuleList(\n",
-      "      (0-35): 36 x GPT2Block(\n",
-      "        (ln_1): LayerNorm((1280,), eps=1e-05, elementwise_affine=True)\n",
+      "      (0-5): 6 x GPT2Block(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
       "        (attn): GPT2Attention(\n",
       "          (c_attn): Conv1D()\n",
       "          (c_proj): Conv1D()\n",
       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
       "        )\n",
-      "        (ln_2): LayerNorm((1280,), eps=1e-05, elementwise_affine=True)\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
       "        (mlp): GPT2MLP(\n",
       "          (c_fc): Conv1D()\n",
       "          (c_proj): Conv1D()\n",
@@ -186,9 +110,9 @@
       "        )\n",
       "      )\n",
       "    )\n",
-      "    (ln_f): LayerNorm((1280,), eps=1e-05, elementwise_affine=True)\n",
+      "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
       "  )\n",
-      "  (lm_head): Linear(in_features=1280, out_features=50257, bias=False)\n",
+      "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
       ")\n"
      ]
     }
@@ -206,34 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error processing line 1 of /home/hadarla/.local/lib/python3.10/site-packages/vision-1.0.0-nspkg.pth:\n",
-      "\n",
-      "  Traceback (most recent call last):\n",
-      "    File \"/home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site.py\", line 186, in addpackage\n",
-      "      exec(line)\n",
-      "    File \"<string>\", line 1, in <module>\n",
-      "    File \"<frozen importlib._bootstrap>\", line 568, in module_from_spec\n",
-      "  AttributeError: 'NoneType' object has no attribute 'loader'\n",
-      "\n",
-      "Remainder of file ignored\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in /home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages (from -r /home/hadarla/Projects/brainscore-language-fork/brainscore-language/brainscore_language/metrics/linear_predictivity/requirements.txt (line 1)) (1.3.2)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.17.3 in /home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages (from scikit-learn->-r /home/hadarla/Projects/brainscore-language-fork/brainscore-language/brainscore_language/metrics/linear_predictivity/requirements.txt (line 1)) (1.26.2)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in /home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages (from scikit-learn->-r /home/hadarla/Projects/brainscore-language-fork/brainscore-language/brainscore_language/metrics/linear_predictivity/requirements.txt (line 1)) (1.11.4)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages (from scikit-learn->-r /home/hadarla/Projects/brainscore-language-fork/brainscore-language/brainscore_language/metrics/linear_predictivity/requirements.txt (line 1)) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/hadarla/miniconda3/envs/brain-score-env/lib/python3.10/site-packages (from scikit-learn->-r /home/hadarla/Projects/brainscore-language-fork/brainscore-language/brainscore_language/metrics/linear_predictivity/requirements.txt (line 1)) (3.2.0)\n"
+     "ename": "AssertionError",
+     "evalue": "No registrations found for Willett2023-linear",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbrainio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01massemblies\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m merge_data_arrays\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbrainscore_language\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_benchmark\n\u001b[0;32m----> 5\u001b[0m benchmark \u001b[38;5;241m=\u001b[39m \u001b[43mload_benchmark\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mWillett2023-linear\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m layer_scores \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[0;32m~/Projects/brainscore-language-fork/brainscore-language/brainscore_language/__init__.py:38\u001b[0m, in \u001b[0;36mload_benchmark\u001b[0;34m(identifier)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_benchmark\u001b[39m(identifier: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Benchmark:\n\u001b[1;32m     36\u001b[0m     import_plugin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbrainscore_language\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbenchmarks\u001b[39m\u001b[38;5;124m'\u001b[39m, identifier)\n\u001b[0;32m---> 38\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbenchmark_registry\u001b[49m\u001b[43m[\u001b[49m\u001b[43midentifier\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Projects/brainscore-language-fork/brainscore-language/brainscore_language/benchmarks/willett2023/benchmark.py:17\u001b[0m, in \u001b[0;36mWillett2023Linear.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 17\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m \u001b[43mload_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mWillett2023-linear\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmetric \u001b[38;5;241m=\u001b[39m load_metric(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear_pearsonr\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     19\u001b[0m     ceiler \u001b[38;5;241m=\u001b[39m ExtrapolationCeiling()\n",
+      "File \u001b[0;32m~/Projects/brainscore-language-fork/brainscore-language/brainscore_language/__init__.py:24\u001b[0m, in \u001b[0;36mload_dataset\u001b[0;34m(identifier)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_dataset\u001b[39m(identifier: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Union[DataAssembly, Any]:\n\u001b[0;32m---> 24\u001b[0m     \u001b[43mimport_plugin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbrainscore_language\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midentifier\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data_registry[identifier]()\n",
+      "File \u001b[0;32m~/miniconda3/envs/brain-score-env/lib/python3.10/site-packages/brainscore_core/plugin_management/import_plugin.py:90\u001b[0m, in \u001b[0;36mimport_plugin\u001b[0;34m(library_root, plugin_type, identifier, registry_prefix)\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimport_plugin\u001b[39m(library_root: \u001b[38;5;28mstr\u001b[39m, plugin_type: \u001b[38;5;28mstr\u001b[39m, identifier: \u001b[38;5;28mstr\u001b[39m, registry_prefix: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m     81\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\" \u001b[39;00m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;124;03m    Installs the dependencies of the given plugin and imports its base package: \u001b[39;00m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;124;03m    Given the identifier `Futrell2018-pearsonr` from library_root `brainscore_language`,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;124;03m        in that directory's requirements.txt, and the plugin base package is imported\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 90\u001b[0m     importer \u001b[38;5;241m=\u001b[39m \u001b[43mImportPlugin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlibrary_root\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlibrary_root\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplugin_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mplugin_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midentifier\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43midentifier\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[43m                            \u001b[49m\u001b[43mregistry_prefix\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mregistry_prefix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     93\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m installation_preference() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mno\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     94\u001b[0m         importer\u001b[38;5;241m.\u001b[39minstall_requirements()\n",
+      "File \u001b[0;32m~/miniconda3/envs/brain-score-env/lib/python3.10/site-packages/brainscore_core/plugin_management/import_plugin.py:32\u001b[0m, in \u001b[0;36mImportPlugin.__init__\u001b[0;34m(self, library_root, plugin_type, identifier, registry_prefix)\u001b[0m\n\u001b[1;32m     30\u001b[0m registry_prefix \u001b[38;5;241m=\u001b[39m registry_prefix \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplugin_type\u001b[38;5;241m.\u001b[39mstrip(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mregistry_name \u001b[38;5;241m=\u001b[39m registry_prefix \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_registry\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplugin_dirname \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocate_plugin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/brain-score-env/lib/python3.10/site-packages/brainscore_core/plugin_management/import_plugin.py:56\u001b[0m, in \u001b[0;36mImportPlugin.locate_plugin\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     53\u001b[0m             specified_plugin_dirname \u001b[38;5;241m=\u001b[39m plugin_dirname\n\u001b[1;32m     54\u001b[0m             plugin_registrations_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 56\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m plugin_registrations_count \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo registrations found for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39midentifier\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m plugin_registrations_count \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMore than one registration found for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39midentifier\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m specified_plugin_dirname\n",
+      "\u001b[0;31mAssertionError\u001b[0m: No registrations found for Willett2023-linear"
      ]
     }
    ],
@@ -242,7 +156,7 @@
     "from brainio.assemblies import merge_data_arrays\n",
     "from brainscore_language import load_benchmark\n",
     "\n",
-    "benchmark = load_benchmark('Pereira2018.243sentences-linear')\n",
+    "benchmark = load_benchmark('Willett2023-linear')\n",
     "\n",
     "layer_scores = []"
    ]
